Fix text wrapping

--- a/resources/css/bem/tooltip-achievement.less
+++ b/resources/css/bem/tooltip-achievement.less
@@ -35,6 +35,7 @@
     grid-area: content;
     display: grid;
     gap: 16px;
+    overflow-wrap: anywhere;
 
     &--hover {
       opacity: var(--opacity-hover);
